# keylayout_to_xkb

./: .gitignore  KNOWN_LIMITATIONS.md  README.md  WRONG_TURNS.md  pyproject.toml
docs/: FIDELITY_AND_NORMALIZATION.md  MANUAL_XKB_TEST_TARGETS.md  UCHR_FORMAT.md  UCHR_FORMAT_HANDOFF.md
samples/: install_239_xkb_layouts_20260705_011452.py
samples/generated_xkb_layouts_20260705_011507/: 2sethangul_reference.md  390hangul_reference.md  3sethangul_reference.md  abc_reference.md  abcazerty_reference.md  abcindia_reference.md  abcqwertz_reference.md  adlamqwerty_reference.md  afghandari_reference.md  afghanpashto_reference.md  afghanuzbek_reference.md  akan_reference.md  albanian_reference.md  anjal_reference.md  apache_reference.md  arabic_reference.md  arabicazerty_reference.md  arabicnorthafrica_reference.md  arabicpc_reference.md  arabicqwerty_reference.md  armenianhmqwerty_reference.md  armenianwesternqwerty_reference.md  assamese_reference.md  australian_reference.md  austrian_reference.md  azeri_reference.md  bangla_reference.md  banglaqwerty_reference.md  belgian_reference.md  bodo_reference.md  brazilian_reference.md  brazilianabnt2_reference.md  brazilianpro_reference.md  british_reference.md  britishpc_reference.md  bulgarian_reference.md  bulgarianphonetic_reference.md  byelorussian_reference.md  canadian_reference.md  canadiancsa_reference.md  (+438 more)
src/keylayout_to_xkb/: __init__.py  __main__.py
src/keylayout_to_xkb/common/: debug.py  gestalt_keyboard.py  mac_virtual_keys.py  models.py  policy.py
tests/probes/: layout-languages.py  probe_base_map_vs_registry.py  probe_base_resolution.py  probe_caps_behavior.py  probe_caps_layer.py  probe_deadkey_oracle.py  probe_eight_level_discriminators.py  probe_kbdtype_resolution.py  probe_kbgetlayouttype_dump.py  probe_layout_languages.py  probe_modmap_alignment_equivalence.py  probe_oracle_full_coverage.py  probe_table_disagreement_cells.py  probe_xkb_roundtrip.py
(+32 files in other folders)
