# keylayout_to_xkb/pyproject.toml
#
# Project metadata and build configuration for keylayout_to_xkb.
#
# src-layout: the importable package lives at src/keylayout_to_xkb/. The repo
# root and the src/ directory are NOT packages (no __init__.py); only the
# directories under src/ are. This makes the import root unambiguous for both
# the build backend and the editor's analyzer.
#
# Install editable for development, after which `python -m keylayout_to_xkb`
# works from any directory:
#
#     pip install -e .
#
# Or run in place without installing:
#
#     cd src && python -m keylayout_to_xkb --help

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "keylayout_to_xkb"
version = "0.1.0"
description = "Convert macOS keyboard layouts (uchr) to XKB symbols and Compose output"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Kris" },
]
keywords = [
    "xkb",
    "keyboard",
    "layout",
    "macos",
    "keylayout",
    "compose",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Utilities",
]

# No hard runtime dependencies for the extraction/parsing phase: the macOS
# TIS bridge uses ctypes from the standard library, and parsing uses struct.
# Optional fold/transliteration deps (e.g. anyascii) belong to later stages
# and will be added under [project.optional-dependencies] when those land.
dependencies = []


[project.scripts]
# Console entry point so the tool is runnable as `keylayout-to-xkb` after
# install, in addition to `python -m keylayout_to_xkb`.
keylayout-to-xkb = "keylayout_to_xkb.__main__:main"


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]


# End of file #
